fixed stretched logos in footer and mobile nav

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -75,6 +75,11 @@
     margin: 0 auto;
 }
 
+.topRated,
+.eliteService {
+    height: fit-content;
+}
+
 /* @media (max-width: 640px) {
 
     .footer-copyright {
